--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -3,12 +3,17 @@
   <head>
     <%= render "head", metadata: site.metadata, title: resource.data.title %>
   </head>
-  <body class="<%= resource.data.layout %> <%= resource.data.page_class %>">
+  <body class="govuk-template__body <%= resource.data.layout %> <%= resource.data.page_class %>">
     <%= render Shared::Navbar.new(metadata: site.metadata, resource: resource) %>
 
-    <main>
-      <%= yield %>
-    </main>
+    <div class="govuk-width-container">
+      <main class="govuk-main-wrapper" id="main-content" role="main">
+        <div class="govuk-row">
+          <%= yield %>
+        </div>
+      </main>
+    </div>
+
 
     <%= render "footer", metadata: site.metadata %>
   </body>
